# ticket-triaging-agent

./: .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: .env.example  config.py  exceptions.py  main.py
backend/app/agents/: __init__.py  analyzer.py  defaults.py  fallback.py  graph.py  nodes.py  utils.py
backend/app/api/: analysis.py  tickets.py
backend/app/database/: __init__.py  connection.py
backend/app/models/: __init__.py  analysis.py  base.py  ticket.py
backend/app/schemas/: __init__.py  analysis.py  base.py  ticket.py
backend/assets/: sample_tickets.json  sample_tickets_large.json  sample_tickets_small.json
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AnalysisButton.tsx  AnalysisResults.tsx  AnalyzedTicketsPane.tsx  LatestAnalysisPane.tsx  LoadingSpinner.tsx  PendingTicketsPane.tsx  TicketCreationPane.tsx  TicketDetailsModal.tsx  TicketForm.tsx  TicketList.tsx
frontend/src/contexts/: ToastContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
